<resources>
    <string name="faq">FAQ</string>
    <string name="progress">Progress</string>
    <string name="sessions">Sessions</string>
    <string name="questions">Questions</string>
    <string name="activities">Activities</string>
    <string name="rating_title">Session Feedback</string>
    <string name="rating_message">How was the class today?</string>
    <string name="course_name">Course Name</string>
    <string name="recyclerViewFaqs">Elements of Software Construction</string>
    <string name="title_activity_session">Elements of Software Construction</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">User Id</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="sign_up">Don\'t have an account ? Click here to </string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="questiontab">Question</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="feedback">Feedback</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <string name="courses">Courses</string>
    <string name="grades">Grades</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="add_new_session">Add new session</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_professor_progress_fragment">ProfessorProgressFragment</string>


    <string name="user_id">User Id</string>
    <string name="full_name">Full Name</string>
    <string name="user_type">User Type</string>
    <string name="password">Password</string>
    <string name="security_answer">Security Answer</string>
    <string name="course_full_name">Current Course Full Name</string>
    <string name="course_id">Current Course Id</string>
    <string name="end_session">End Session</string>
    <string name="start_session">Start Session</string>
    <string name="delete_session">Delete Session</string>
    <string name="session_id">Current Session Id</string>
    <string name="application_name">Eureka</string>
    <string name="session_name">Current Session Name</string>
    <string name="quiz_name">Quiz Name</string>

</resources>
