<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item type="id" name="layout_add_session" />
    <item type="id" name="layout2" />
    <item type="id" name="layout3" />
</resources>