<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Session.Student.StudentActivity.SideScreens.AnsweringZoneFrag"
    android:background="#ffffff"
    android:clickable="true">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewStudentQns"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/submitbutton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"></android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/submitbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="Submit"
        android:textAppearance="@style/Edit_button" />

</RelativeLayout>
