<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/course_rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.esc_50005.UI.Course.FAQ.CourseActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@style/Transparent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/Transparent"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <!--<ImageButton-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--style="?android:attr/borderlessButtonStyle"-->
                    <!--android:background="@drawable/keyboard_left_arrow_button"/>-->

            </android.support.v7.widget.Toolbar>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="60dp">

                <TextView
                    android:id="@+id/toolbar_course_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:layout_gravity="left"
                    android:gravity="left"
                    android:text="Elements of Software Construction"
                    android:textAppearance="@style/Toolbar_Title" />

                <TextView
                    android:id="@+id/toolbar_course_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="45dp"
                    android:paddingTop="8dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:layout_gravity="left"
                    android:text="Course Code: 50.003"
                    android:textAppearance="@style/Toolbar_Subtitle" />

                <!--<Button-->
                <!--android:id="@+id/btntest"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--app:layout_collapseMode="parallax"-->
                <!--android:text="Start/End" />-->
            </LinearLayout>

        </android.support.design.widget.CollapsingToolbarLayout>

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:background="@color/colorTab"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/tab_layout"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/course_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:layout_gravity="bottom|center"
        android:layout_margin="10dp"
        android:src="@drawable/ic_add_white_24dp"
        app:fabSize="mini" />
</android.support.design.widget.CoordinatorLayout>
