...
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    tools:context="com.example.esc_50005.UI.Course.FAQ.CourseActivity">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/faq_cv"
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="-3dp"
        android:layout_marginStart="-3dp"
        tools:ignore="ContentDescription">
...
